--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="C:\Users\kavinilavu Manivelan\Downloads\IMG-20231216-WA0012.jpg" alt="kavi's profile"></td>
+            <td><img src="D:\web development\html-personal sites\IMG-20231216-WA0012-modified.png" alt="kavi's profile"></td>
             <td><h1>Kavinilavu</h1>
                 <p><em>Student of<strong><a href="https://www.shiksha.com/mca-master-of-computer-applications-chp" target="_blank">MCA</a></em></strong></p>
                 <p>Iam the student at PSG CAS.Iam curently doing my PG here.I had completed my UG with mathematics major.So iam trying my best to achieve in this field.<br>And i love 🍗briyani.</p>
